// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`materialButton.js renders component 1`] = `
<button
  className="sc-bwzfXH fBYzTV"
  onClick={[Function]}
  role="button"
>
  Click me
  <div
    className="sc-bdVaJa hMQdQq"
    color="#1976d2"
    onMouseDown={[Function]}
  />
</button>
`;

exports[`materialButton.js renders component 2`] = `
<button
  className="sc-bwzfXH ePwoXT"
  onClick={[Function]}
  role="button"
>
  Toggle raised
  <div
    className="sc-bdVaJa hMQdQq"
    color="#1976d2"
    onMouseDown={[Function]}
  />
</button>
`;
